# mercatorio-game-bot

./: .gitignore  README.md  config.json  index.js  main.py  package-lock.json  package.json  pyproject.toml  towns.json  utils.js
api/: API_request.js  player.js  storage.js
logs/: log_18-06-24.txt  log_20-06-24.txt
reports/: turn_report_18-06-24_21-29-10.txt  turn_report_18-06-24_hour-21.txt  turn_report_20-06-24_hour-19.md  turn_report_20-06-24_hour-20.md
routines/: create_turn_report.js  main.js  reports.py
website/: package-lock.json  package.json  server.js
website/public/: index.html  index.js  styles.css
